Weiteres zur Stringverarbeitung: Substring
TODO GOON: Weiter am lokalen Kopieren arbeiten.

--- a/bin/FglPATTON-PRV_copy_local.properties
+++ b/bin/FglPATTON-PRV_copy_local.properties
@@ -1,4 +1,9 @@
 # Unterdatei des copy Task einer HOST Maschine
 # Format: Dateiname = Zielverzeichnis
-c:\vmWare\FGLXPHannibalVideoPlay3_768MB\HannibalVideoPlay3VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
-c:\vmWare\FGLXPHannibalVideoPlay3_768MB\FGLXPHannibalVideoPlay4_768MB\HannibalVideoPlay4VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
+
+# TODO: Die VMD Dateinamen müssen der Konvention entsprechen: FglRECHNERNAME_Installationen.txt
+# TODO: Im ant Script diese Steuerungsdateien in der initialisierungsphase auf Validität prüfen.
+C:\VMWare\FGLXPHannibalVideoPlay3_768MB\FGLXPHannibalVideoPlay1VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
+c:\vmWare\FGLXPHannibalVideoPlay3_768MB\HannibalVideoPlayxVM.txt=
+c:\vmWare\FGLXPHannibalVideoPlay3_768MB\HannibalVideoPlayyVM.txt
+C:\VMWare\FGLXPHannibalVideoPlay4_768MB\HannibalVideoPlay4VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
