--- a/bat/FglHIS4528_copy_local.properties
+++ b/bat/FglHIS4528_copy_local.properties
@@ -3,3 +3,7 @@ test2=zwei
 test3=drei
 test4
 test5=fuenf
+# Unterdatei des copy Task einer HOST Maschine
+# Format: Verzeichnis\Dateiname = Zielverzeichnis , bzw Zieldateiname
+C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp
+C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp
