TODO: tryOut_FlakaListHandling

--- a/bat/FglHIS4528_copy_local.properties
+++ b/bat/FglHIS4528_copy_local.properties
@@ -1,9 +1,16 @@
+# Test: Linker Teil existiert nicht und Rechter Teil existiert nicht. STEUERZEILE ÜBERSPRINGEN
 test1=eins
-test2=zwei
-test3=drei
-test4
-test5=fuenf
+
+# Test: Rechter Teil der Steueranweisung existiert nicht, ABBRUCH - Muss noch ausprogrammiert werden
+# test4 
+
+# Test: Linker Teil der Steueranweisung ist ein Verzeichnis, ABBRUCH - Muss noch ausprogrammiert werden
+# C:\1fgl\repository\Projekt_VMD\testused=C:\temp
+
 # Unterdatei des copy Task einer HOST Maschine
-# Format: Verzeichnis\Dateiname = Zielverzeichnis , bzw Zieldateiname
+# Format: Dateipfad = Zieldateipfad
+C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel00.txt=C:\temp\file_copyBeispiel00.txt
+
+# Format: Dateipfad = Zielverzeichnis
 C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp
 C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp
