7 - Todo: true Fall sicher erkennen!

--- a/bat/FglPATTON-PRV_copy_local.properties
+++ b/bat/FglPATTON-PRV_copy_local.properties
@@ -3,6 +3,11 @@
 
 # TODO: Die VMD Dateinamen müssen der Konvention entsprechen: FglRECHNERNAME_Installationen.txt
 # TODO: Im ant Script diese Steuerungsdateien in der initialisierungsphase auf Validität prüfen.
+
+# Kopiertest: 1. Verzeichnis links - Dadurch soll abgebrochen werden.
+# c:\vmWare\FGLXPHannibalVideoPlay3_768MB=C:\VMWare\FGLXPHannibalVideoPlay3_768MB\FGLXPHannibalVideoPlay1VM.txt
+
+# Kopiertest: 2. Datei mit gleichem Namen in Verzeichnis
 C:\VMWare\FGLXPHannibalVideoPlay3_768MB\FGLXPHannibalVideoPlay1VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
 c:\vmWare\FGLXPHannibalVideoPlay3_768MB\HannibalVideoPlayxVM.txt=
 c:\vmWare\FGLXPHannibalVideoPlay3_768MB\HannibalVideoPlayyVM.txt
