10 - aus temp einzelne Snippets passend wieder einfügen

--- a/bat/FglPATTON-PRV_copy_local.properties
+++ b/bat/FglPATTON-PRV_copy_local.properties
@@ -4,11 +4,16 @@
 # TODO: Die VMD Dateinamen müssen der Konvention entsprechen: FglRECHNERNAME_Installationen.txt
 # TODO: Im ant Script diese Steuerungsdateien in der initialisierungsphase auf Validität prüfen.
 
+# Fehlertests:
+# Rechter Teil existiert nicht c:\vmWare\FGLXPHannibalVideoPlay3_768MB\HannibalVideoPlayxVM.txt=
+#                              c:\vmWare\FGLXPHannibalVideoPlay3_768MB\HannibalVideoPlayyVM.txt
+
+
+
 # Kopiertest: 1. Verzeichnis links - Dadurch soll abgebrochen werden.
 # c:\vmWare\FGLXPHannibalVideoPlay3_768MB=C:\VMWare\FGLXPHannibalVideoPlay3_768MB\FGLXPHannibalVideoPlay1VM.txt
 
 # Kopiertest: 2. Datei mit gleichem Namen in Verzeichnis
 C:\VMWare\FGLXPHannibalVideoPlay3_768MB\FGLXPHannibalVideoPlay1VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
-c:\vmWare\FGLXPHannibalVideoPlay3_768MB\HannibalVideoPlayxVM.txt=
-c:\vmWare\FGLXPHannibalVideoPlay3_768MB\HannibalVideoPlayyVM.txt
+
 C:\VMWare\FGLXPHannibalVideoPlay4_768MB\HannibalVideoPlay4VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
