--- a/bat/FglPATTON-PRV_copy_local.properties
+++ b/bat/FglPATTON-PRV_copy_local.properties
@@ -13,7 +13,10 @@
 # Kopiertest: 1. Verzeichnis links - Dadurch soll abgebrochen werden.
 # c:\vmWare\FGLXPHannibalVideoPlay3_768MB=C:\VMWare\FGLXPHannibalVideoPlay3_768MB\FGLXPHannibalVideoPlay1VM.txt
 
-# Kopiertest: 2. Datei mit gleichem Namen in Verzeichnis
-C:\VMWare\FGLXPHannibalVideoPlay3_768MB\FGLXPHannibalVideoPlay1VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
+# Kopiertest: 2. Datei von A nach B kopieren
+C:\VMWare\FGLXPHannibalVideoPlay3_768MB\FGLXPHannibalVideoPlay1VM.txt=C:\1fgl\repository\Projekt_VMD\vmd\FGLXPHannibalVideoPlay1VM.txt
+C:\VMWare\FGLXPHannibalVideoPlay4_768MB\HannibalVideoPlay4VM.txt=C:\1fgl\repository\Projekt_VMD\vmd\HannibalVideoPlay4VM.txt
 
-C:\VMWare\FGLXPHannibalVideoPlay4_768MB\HannibalVideoPlay4VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
+# Kopiertest: 3. Datei mit gleichem Namen in Verzeichnis
+#C:\VMWare\FGLXPHannibalVideoPlay3_768MB\FGLXPHannibalVideoPlay1VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
+#C:\VMWare\FGLXPHannibalVideoPlay4_768MB\HannibalVideoPlay4VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
