--- a/bat/FglHIS4528_copy_local.properties
+++ b/bat/FglHIS4528_copy_local.properties
@@ -12,5 +12,5 @@ test1=eins
 C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel00.txt=C:\temp\file_copyBeispiel00.txt
 
 # Format: Dateipfad = Zielverzeichnis
-C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp
-C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp
+# C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp
+# C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp
