Weitermachen mit copyLocal - Schleife der Arrays durchlaufen und Array an Array hängen

--- a/bat/FglPATTON-PRV_copy_local.properties
+++ b/bat/FglPATTON-PRV_copy_local.properties
@@ -15,7 +15,7 @@
 
 # Kopiertest: 2. Datei von A nach B kopieren
 C:\VMWare\FGLXPHannibalVideoPlay3_768MB\FGLXPHannibalVideoPlay1VM.txt=C:\1fgl\repository\Projekt_VMD\vmd\FGLXPHannibalVideoPlay1VM.txt
-#C:\VMWare\FGLXPHannibalVideoPlay4_768MB\HannibalVideoPlay4VM.txt=C:\1fgl\repository\Projekt_VMD\vmd\HannibalVideoPlay4VM.txt
+C:\VMWare\FGLXPHannibalVideoPlay4_768MB\HannibalVideoPlay4VM.txt=C:\1fgl\repository\Projekt_VMD\vmd\HannibalVideoPlay4VM.txt
 
 # Kopiertest: 3. Datei mit gleichem Namen in Verzeichnis
 #C:\VMWare\FGLXPHannibalVideoPlay3_768MB\FGLXPHannibalVideoPlay1VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
