TODO: Fall den Dateinamen von links nach rechts übernehmen

--- a/bat/FglHIS4528_copy_local.properties
+++ b/bat/FglHIS4528_copy_local.properties
@@ -10,6 +10,8 @@ test1=eins
 # Unterdatei des copy Task einer HOST Maschine
 # Format: Dateipfad = Zieldateipfad
 C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel00.txt=C:\temp\file_copyBeispiel00.txt
+C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp\file_copyBeispiel01.txt
+C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp\file_copyBeispiel02.txt
 
 # Format: Dateipfad = Zielverzeichnis
 # C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp
