--- a/bat/FglHIS4528_copy_local.properties
+++ b/bat/FglHIS4528_copy_local.properties
@@ -7,12 +7,18 @@ test1=eins
 # Test: Linker Teil der Steueranweisung ist ein Verzeichnis, ABBRUCH - Muss noch ausprogrammiert werden
 # C:\1fgl\repository\Projekt_VMD\testused=C:\temp
 
-# Unterdatei des copy Task einer HOST Maschine
-# Format: Dateipfad = Zieldateipfad
-C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel00.txt=C:\temp\file_copyBeispiel00.txt
-C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp\file_copyBeispiel01.txt
-C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp\file_copyBeispiel02.txt
 
+
+# Unterdatei des copy Task einer HOST Maschine
+# 1. In Entwickung:
 # Format: Dateipfad = Zielverzeichnis
-# C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp
+C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp
 # C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp
+
+
+# 2. Funktioniert:
+# Format: Dateipfad = Zieldateipfad
+#C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel00.txt=C:\temp\file_copyBeispiel00.txt
+#C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp\file_copyBeispiel01.txt
+#C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp\file_copyBeispiel02.txt
+
