--- a/bat/FglPATTON-PRV_copy_local.properties
+++ b/bat/FglPATTON-PRV_copy_local.properties
@@ -9,14 +9,20 @@
 #                              c:\vmWare\FGLXPHannibalVideoPlay3_768MB\HannibalVideoPlayyVM.txt
 
 
+# Unterdatei des copy Task einer HOST Maschine
+# 1. In Entwickung:
+# Format: Dateipfad = Zielverzeichnis
+# Kopiertest: Datei mit gleichem Namen in Verzeichnis
+C:\VMWare\FGLXPHannibalVideoPlay3_768MB\FGLXPHannibalVideoPlay1VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
+#C:\VMWare\FGLXPHannibalVideoPlay4_768MB\FGLXPHannibalVideoPlay4VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
 
-# Kopiertest: 1. Verzeichnis links - Dadurch soll abgebrochen werden.
+# Format: Ausgangsverzeichnis = Dateipfad
+# Kopiertest: Verzeichnis links - Dadurch soll abgebrochen werden.
 # c:\vmWare\FGLXPHannibalVideoPlay3_768MB=C:\VMWare\FGLXPHannibalVideoPlay3_768MB\FGLXPHannibalVideoPlay1VM.txt
 
-# Kopiertest: 2. Datei von A nach B kopieren
-C:\VMWare\FGLXPHannibalVideoPlay3_768MB\FGLXPHannibalVideoPlay1VM.txt=C:\1fgl\repository\Projekt_VMD\vmd\FGLXPHannibalVideoPlay1VM.txt
-C:\VMWare\FGLXPHannibalVideoPlay4_768MB\FGLXPHannibalVideoPlay4VM.txt=C:\1fgl\repository\Projekt_VMD\vmd\FGLXPHannibalVideoPlay4VM.txt
+# 2. Funktioniert:
+# Format: Dateipfad = Zieldateipfad
+# Kopiertest: Datei von A nach B kopieren
+#C:\VMWare\FGLXPHannibalVideoPlay3_768MB\FGLXPHannibalVideoPlay1VM.txt=C:\1fgl\repository\Projekt_VMD\vmd\FGLXPHannibalVideoPlay1VM.txt
+#C:\VMWare\FGLXPHannibalVideoPlay4_768MB\FGLXPHannibalVideoPlay4VM.txt=C:\1fgl\repository\Projekt_VMD\vmd\FGLXPHannibalVideoPlay4VM.txt
 
-# Kopiertest: 3. Datei mit gleichem Namen in Verzeichnis
-#C:\VMWare\FGLXPHannibalVideoPlay3_768MB\FGLXPHannibalVideoPlay1VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
-#C:\VMWare\FGLXPHannibalVideoPlay4_768MB\HannibalVideoPlay4VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
