CopyLocalAnalyze - X nur noch für nicht interpretierbar verwenden

--- a/bat/FglHIS4528_copy_local.properties
+++ b/bat/FglHIS4528_copy_local.properties
@@ -1,4 +1,5 @@
 # Test: Linker Teil existiert nicht und Rechter Teil existiert nicht. STEUERZEILE ÜBERSPRINGEN
+#Merke: Nicht existierende Verzeichnisse werden automatisch durch ant erstellt.
 test1=eins
 
 # Test: Rechter Teil der Steueranweisung existiert nicht, ABBRUCH - Muss noch ausprogrammiert werden
@@ -11,9 +12,9 @@ test1=eins
 
 # Unterdatei des copy Task einer HOST Maschine
 # 1. In Entwickung:
-# Format: Dateipfad = Zielverzeichnis
-C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp
-# C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp
+# Format: Dateipfad = Zielverzeichnis # Merke: Nicht existierende Verzeichnisse werden automatisch durch ant erstellt.
+C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp\notexisting\notexistingEbene2
+C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp
 
 # 2. Funktioniert:
 # Format: Dateipfad = Zieldateipfad
