--- a/bat/FglHIS4528_copy_local.properties
+++ b/bat/FglHIS4528_copy_local.properties
@@ -12,21 +12,28 @@ test1=eins
 
 # Unterdatei des copy Task einer HOST Maschine
 # 1. In Entwickung:
-# Format: Ausgangsverzeichnis = Dateipfad
-# Kopiertest: Verzeichnis links - nimm den Dateinamen von rechts. Existierende Datei rechts!
-C:\1fgl\repository\Projekt_VMD\testused=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel01.txt
 
 #Fall: links Verzeichnis, rechts NICHT EXISTIERENDE Datei
-#C:\1fgl\repository\Projekt_VMD\testused=C:\temp\notexisting\notexistingEbene2\file_copyBeispiel01.txt
+# Kopiertest Df: Existierndes Verzeichnis links - nimm den Dateinamen von rechts. NICHT Existierende Datei rechts!
+C:\1fgl\repository\Projekt_VMD\testused=C:\temp\notexisting\notexistingEbene2\file_copyBeispiel01.txt
 
 
 
 # 2. Funktioniert:
-# Format: Dateipfad = Zielverzeichnis # Merke: Nicht existierende Verzeichnisse werden automatisch durch ant erstellt.
-# C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp\notexisting\notexistingEbene2
-# C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp
+# Format: Ausgangsverzeichnis = Dateipfad
+# Kopiertest DF: Verzeichnis links - nimm den Dateinamen von rechts. Existierende Datei rechts!
+#C:\1fgl\repository\Projekt_VMD\testused=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel02_01.txt
+
+# Format: Dateipfad = nicht existierendes Zielverzeichnis # Merke: Nicht existierende Verzeichnisse werden automatisch durch ant erstellt.
+# Kopiertest Fd: 
+#C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp\notexisting\notexistingEbene2
+ 
+# Format: Dateipfad = existierendes Zielverzeichnis
+# Kopiertest FD:
+#C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp
 
 # Format: Dateipfad = Zieldateipfad
+# Kopiertest FF:
 #C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel00.txt=C:\temp\file_copyBeispiel00.txt
 #C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp\file_copyBeispiel01.txt
 #C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp\file_copyBeispiel02.txt
