Lokale Projektdatei mit HOST spezifischen Namen als Uebersteuerung

--- a/bat/FglUGAKI-PRV_copy_local.properties
+++ b/bat/FglUGAKI-PRV_copy_local.properties
@@ -12,12 +12,6 @@
 # 1. In Entwickung:
 # TODO: Entwickle einen Löschtask für Verzeichnisse und Dateien, der konfigurierbar sein soll... Damit man vor den Tests nicht immer die nicht existierenden Dateien Verzeichnisse zu löschen hat.
 
-#Fall: links Verzeichnis, rechts NICHT EXISTIERENDE Datei
-# Kopiertest Df 1. Fall: Existierndes Verzeichnis links - nimm den Dateinamen von rechts. NICHT Existierende Datei rechts, die AUCH im linken Verzeichnis NICHT existiert!
-# Merke: Wenn die Datei nicht existiert, wird das nicht existierende Verzeichnis auch nicht erstellt.
-C:\1fgl\repository\Projekt_VMD\testused=C:\temp\notexisting\notexistingEbene2\neverExistingFile.txt
-
-
 # Test: Linker Teil der Steueranweisung ist ein Verzeichnis, Momentan ABBRUCH - Kann aber auch bedeuten alle relevanten Dateien zu kopieren. Muss noch ausprogrammiert werden
 # C:\1fgl\repository\Projekt_VMD\testused=C:\temp
 
@@ -39,24 +33,32 @@ C:\1fgl\repository\Projekt_VMD\testused=C:\temp\notexisting\notexistingEbene2\ne
 # Rechter Teil existiert nicht c:\vmWare\FGLXPHannibalVideoPlay3_768MB\HannibalVideoPlayxVM.txt=
 #                              c:\vmWare\FGLXPHannibalVideoPlay3_768MB\HannibalVideoPlayyVM.txt
 
-
+####################################################################
+# 2. Funktioniert:
 # Tests erlaubter Konfigurationen
+
+#Fall: links Verzeichnis, rechts NICHT EXISTIERENDE Datei
+# Kopiertest Df 1. Fall: Existierndes Verzeichnis links - nimm den Dateinamen von rechts. NICHT Existierende Datei rechts, die AUCH im linken Verzeichnis NICHT existiert!
+# Merke: Wenn die Datei nicht existiert, wird das nicht existierende Verzeichnis auch nicht erstellt.
+#C:\1fgl\repository\Projekt_VMD\testused=C:\temp\notexisting\notexistingEbene2\neverExistingFile.txt
+
 
 # Kopiertest Df 2. Fall: Existierndes Verzeichnis links - nimm den Dateinamen von rechts. NICHT Existierende Datei rechts, die aber im linken Verzeichnis existiert!
 #C:\1fgl\repository\Projekt_VMD\testused=C:\temp\notexisting\notexistingEbene2\file_copyBeispiel01.txt
 
-
 # Format: Ausgangsverzeichnis = Dateipfad
 # Kopiertest DF: Verzeichnis links - nimm den Dateinamen von rechts. Existierende Datei rechts!
+# TODO: Einen Löschtask entwickeln und diesen vorher einsetzen, damit die Datei auch wirklich rechts nicht existiert.
 #C:\1fgl\repository\Projekt_VMD\testused=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel02_01.txt
 
 # Format: Dateipfad = nicht existierendes Zielverzeichnis # Merke: Nicht existierende Verzeichnisse werden automatisch durch ant erstellt.
+# TODO: Einen Löschtask entwickeln und diesen vorher einsetzen, damit das Verzeichnis rechts auch wirklich nicht existiert.
 # Kopiertest Fd: 
 #C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp\notexisting\notexistingEbene2
  
 # Format: Dateipfad = existierendes Zielverzeichnis
 # Kopiertest FD:
-#C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp
+C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp
 
 # Format: Dateipfad = Zieldateipfad
 # Kopiertest FF:
