--- a/bat/FglHIS4528_copy_local.properties
+++ b/bat/FglHIS4528_copy_local.properties
@@ -15,14 +15,14 @@ test1=eins
 
 #Fall: links Verzeichnis, rechts NICHT EXISTIERENDE Datei
 # Kopiertest Df: Existierndes Verzeichnis links - nimm den Dateinamen von rechts. NICHT Existierende Datei rechts!
-C:\1fgl\repository\Projekt_VMD\testused=C:\temp\notexisting\notexistingEbene2\file_copyBeispiel01.txt
+#C:\1fgl\repository\Projekt_VMD\testused=C:\temp\notexisting\notexistingEbene2\file_copyBeispiel01.txt
 
 
 
 # 2. Funktioniert:
 # Format: Ausgangsverzeichnis = Dateipfad
 # Kopiertest DF: Verzeichnis links - nimm den Dateinamen von rechts. Existierende Datei rechts!
-#C:\1fgl\repository\Projekt_VMD\testused=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel02_01.txt
+C:\1fgl\repository\Projekt_VMD\testused=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel02_01.txt
 
 # Format: Dateipfad = nicht existierendes Zielverzeichnis # Merke: Nicht existierende Verzeichnisse werden automatisch durch ant erstellt.
 # Kopiertest Fd: 
