--- a/bat/project_HIS4528_vmd.properties
+++ b/bat/project_HIS4528_vmd.properties
@@ -1,3 +1,3 @@
 #Merke: Einfacher Backslash wird von Ant so nicht erkannt.
 test1=einTestWert
-conf.dirRepositoryVmdPath=C:/1fgl/repository/Projekt_VMD
+conf.dirRepositoryPath_VMD=C:/1fgl/repository/Projekt_VMD
