--- a/bat/project_vmd4eclipseHIS4528.properties
+++ b/bat/project_vmd4eclipseHIS4528.properties
@@ -1,3 +1,3 @@
 #Merke: Einfacher Backslash wird von Ant so nicht erkannt.
 test1=einTestWert
-conf.dirRepositoryVmdPath=C:/1fgl/repo_projekt_VMD/Projekt_VMD
+conf.dirRepositoryPath_VMD=C:/1fgl/repo_projekt_VMD/Projekt_VMD
