--- a/bat/FglHIS4528_copy_local.properties
+++ b/bat/FglHIS4528_copy_local.properties
@@ -1,40 +1,2 @@
-# Test: Linker Teil existiert nicht und Rechter Teil existiert nicht. STEUERZEILE ÜBERSPRINGEN
-#Merke: Nicht existierende Verzeichnisse werden automatisch durch ant erstellt.
-test1=eins
-
-# Test: Rechter Teil der Steueranweisung existiert nicht, ABBRUCH - Muss noch ausprogrammiert werden
-# test4 
-
-# Test: Linker Teil der Steueranweisung ist ein Verzeichnis, ABBRUCH - Muss noch ausprogrammiert werden
-# C:\1fgl\repository\Projekt_VMD\testused=C:\temp
-
-
-
-# Unterdatei des copy Task einer HOST Maschine
-# 1. In Entwickung:
-
-#Fall: links Verzeichnis, rechts NICHT EXISTIERENDE Datei
-# Kopiertest Df: Existierndes Verzeichnis links - nimm den Dateinamen von rechts. NICHT Existierende Datei rechts!
-#C:\1fgl\repository\Projekt_VMD\testused=C:\temp\notexisting\notexistingEbene2\file_copyBeispiel01.txt
-
-
-
-# 2. Funktioniert:
-# Format: Ausgangsverzeichnis = Dateipfad
-# Kopiertest DF: Verzeichnis links - nimm den Dateinamen von rechts. Existierende Datei rechts!
-C:\1fgl\repository\Projekt_VMD\testused=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel02_01.txt
-
-# Format: Dateipfad = nicht existierendes Zielverzeichnis # Merke: Nicht existierende Verzeichnisse werden automatisch durch ant erstellt.
-# Kopiertest Fd: 
-#C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp\notexisting\notexistingEbene2
- 
-# Format: Dateipfad = existierendes Zielverzeichnis
-# Kopiertest FD:
-#C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp
-
-# Format: Dateipfad = Zieldateipfad
-# Kopiertest FF:
-#C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel00.txt=C:\temp\file_copyBeispiel00.txt
-#C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp\file_copyBeispiel01.txt
-#C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp\file_copyBeispiel02.txt
-
+# Momentan noch keine Dateien regelmaessig zu sichern
+# Verwende in der HIS4528 Projektkonfiguration den OPERATION__MODE=test
