--- a/bat/project_HIS4528_vmd.properties
+++ b/bat/project_HIS4528_vmd.properties
@@ -1,3 +1,6 @@
 #Merke: Einfacher Backslash wird von Ant so nicht erkannt.
 test1=einTestWert
 conf.dirRepositoryPath_VMD=C:/1fgl/repository/Projekt_VMD
+
+# Es gibt hier nur etwas zu testen, noch keine wirkliche Anforderung
+OPERATION_MODE=test
