--- a/bat/FglALARICH_copy_local.properties
+++ b/bat/FglALARICH_copy_local.properties
@@ -1,7 +1,11 @@
-# Unterdatei des copy Task einer HOST Maschine
-# Format: Dateiname = Zielverzeichnis
+#########################################################################
+# VMD - Projekt:                                     					# 
+# Unterdatei des copy Task einer HOST Maschine 							#
+# Muss der Konvention entsprechen: FglRECHNERNAME_Installationen.txt    #
+# Achtung: Diese Datei muss ins ANSI Format kopiert werden (Notepad+++) #
+# Verschiedene Formate sind möglich                  					#
+#########################################################################
 
-# TODO: Die VMD Dateinamen müssen der Konvention entsprechen: FglRECHNERNAME_Installationen.txt
 # TODO: Im ant Script diese Steuerungsdateien in der initialisierungsphase auf Validität prüfen.
 C:\VMWare\FGLXPHannibalVideoPlay3_768MB\FGLXPHannibalVideoPlay1VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
 c:\vmWare\FGLXPHannibalVideoPlay3_768MB\HannibalVideoPlayxVM.txt=
