--- a/bat/FglHIS4528_copy_local.properties
+++ b/bat/FglHIS4528_copy_local.properties
@@ -1,2 +1,10 @@
+#########################################################################
+# VMD - Projekt:                                     					# 
+# Unterdatei des copy Task einer HOST Maschine 							#
+# Muss der Konvention entsprechen: FglRECHNERNAME_Installationen.txt    #
+# Achtung: Diese Datei muss ins ANSI Format kopiert werden (Notepad+++) #
+# Verschiedene Formate sind möglich                  					#
+#########################################################################
+
 # Momentan noch keine Dateien regelmaessig zu sichern
 # Verwende in der HIS4528 Projektkonfiguration den OPERATION__MODE=test
