--- a/bat/FglPATTON-PRV_copy_local.properties
+++ b/bat/FglPATTON-PRV_copy_local.properties
@@ -1,8 +1,10 @@
-######################################################
-# VMD - Projekt:                                     # 
-# Unterdatei des copy Task einer HOST Maschine       #
-# Verschiedene Formate sind möglich                  #
-######################################################
+#########################################################################
+# VMD - Projekt:                                     					# 
+# Unterdatei des copy Task einer HOST Maschine 							#
+# Muss der Konvention entsprechen: FglRECHNERNAME_Installationen.txt    #
+# Achtung: Diese Datei muss ins ANSI Format kopiert werden (Notepad+++) #
+# Verschiedene Formate sind möglich                  					#
+#########################################################################
 
 # 1. In Entwickung:
 # TODO: Die VMD Dateinamen müssen der Konvention entsprechen: FglRECHNERNAME_Installationen.txt
