--- a/bat/FglUGAKI-PRV_copy_local.properties
+++ b/bat/FglUGAKI-PRV_copy_local.properties
@@ -1,4 +1,11 @@
-ï»¿# Unterdatei des copy Task einer HOST Maschine
+#########################################################################
+# VMD - Projekt:                                     					# 
+# Unterdatei des copy Task einer HOST Maschine 							#
+# Muss der Konvention entsprechen: FglRECHNERNAME_Installationen.txt    #
+# Achtung: Diese Datei muss ins ANSI Format kopiert werden (Notepad+++) #
+# Verschiedene Formate sind möglich                  					#
+#########################################################################
+
 # Format: Verzeichnis\Dateiname = Zielverzeichnis
 #c:\vmWare\FGLXPHannibalVideoPlay3_768MB\FGLXPHannibalVideoPlay3VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
 #c:\vmWare\FGLXPHannibalVideoPlay4_768MB\FGLXPHannibalVideoPlay4VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
