--- a/bat/FglUGAKI-SRV_copy_local.properties
+++ b/bat/FglUGAKI-SRV_copy_local.properties
@@ -1,4 +1,11 @@
-# Unterdatei des copy Task einer HOST Maschine
+#########################################################################
+# VMD - Projekt:                                     					# 
+# Unterdatei des copy Task einer HOST Maschine 							#
+# Muss der Konvention entsprechen: FglRECHNERNAME_Installationen.txt    #
+# Achtung: Diese Datei muss ins ANSI Format kopiert werden (Notepad+++) #
+# Verschiedene Formate sind möglich                  					#
+#########################################################################
+
 # Format: Verzeichnis\Dateiname = Zielverzeichnis
 # c:\vmWare\FGLXPHannibalVideoPlay3_768MB\HannibalVideoPlay3VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
 # c:\vmWare\FGLXPHannibalVideoPlay4_768MB\HannibalVideoPlay4VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
