--- a/bat/project_UGAKI-PRV_vmd.properties
+++ b/bat/project_UGAKI-PRV_vmd.properties
@@ -1,3 +1,5 @@
 #Merke: Einfacher Backslash wird von Ant so nicht erkannt.
 test1=einTestWert
 conf.dirRepositoryPath_VMD=C:/1fgl/repository/Projekt_VMD
+
+OPERATION_MODE_VMD=test
