--- a/bat/FglHIS4528_copy_local.properties
+++ b/bat/FglHIS4528_copy_local.properties
@@ -7,4 +7,5 @@
 #########################################################################
 
 # Momentan noch keine Dateien regelmaessig zu sichern
-# Verwende in der HIS4528 Projektkonfiguration den OPERATION__MODE=test
+# Verwende daher in der HIS4528 Projektkonfiguration den OPERATION__MODE=test
+
