--- a/bat/project_HIS4528_vmd.properties
+++ b/bat/project_HIS4528_vmd.properties
@@ -1,6 +1,9 @@
 #Merke: Einfacher Backslash wird von Ant so nicht erkannt.
 test1=einTestWert
-conf.dirRepositoryPath_VMD=C:/1fgl/repository/Projekt_VMD
+project.vmd.dirRepositoryPath=C:/1fgl/repository/Projekt_VMD
+
+#TEST: 
+#project.vmd.dirRepositoryPath=${project.vmd.dirRepositoryPath}
 
 # Es gibt hier nur etwas zu testen, noch keine wirkliche Anforderung
-OPERATION_MODE=test
+project.vmd.operation_mode=test
