--- a/bat/project_HIS4528_vmd.properties
+++ b/bat/project_HIS4528_vmd.properties
@@ -1,9 +1,12 @@
-#Merke: Einfacher Backslash wird von Ant so nicht erkannt.
+#Test
 test1=einTestWert
-project.vmd.dirRepositoryPath=C:/1fgl/repository/Projekt_VMD
 
-#TEST: 
+#TEST auf Wert gleich Name: 
 #project.vmd.dirRepositoryPath=${project.vmd.dirRepositoryPath}
 
-# Es gibt hier nur etwas zu testen, noch keine wirkliche Anforderung
+#Merke: Einfacher Backslash wird von Ant so nicht erkannt. Darum hier Slash verwenden
+project.vmd.dirRepositoryPath=C:/1fgl/repository/Projekt_VMD
+project.vmd.dirPathClientFgl=c:/1fgl/client
+
+# Es gibt auf dieser Maschine nur etwas zu testen, noch keine wirkliche Anforderung
 project.vmd.operation_mode=test
