--- a/bat/FglUGAKI-PRV_copy_local.properties
+++ b/bat/FglUGAKI-PRV_copy_local.properties
@@ -7,5 +7,5 @@
 #########################################################################
 
 # Format: Verzeichnis\Dateiname = Zielverzeichnis
-#c:\vmWare\FGLXPHannibalVideoPlay3_768MB\FGLXPHannibalVideoPlay3VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
-#c:\vmWare\FGLXPHannibalVideoPlay4_768MB\FGLXPHannibalVideoPlay4VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
+c:\vmWare\FGLXPHannibalVideoPlay3_768MB\FGLXPHannibalVideoPlay3VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
+c:\vmWare\FGLXPHannibalVideoPlay4_768MB\FGLXPHannibalVideoPlay4VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
