--- a/bat/project_UGAKI-PRV_vmd.properties
+++ b/bat/project_UGAKI-PRV_vmd.properties
@@ -1,5 +1,10 @@
 #Merke: Einfacher Backslash wird von Ant so nicht erkannt.
 test1=einTestWert
-conf.dirRepositoryPath_VMD=C:/1fgl/repository/Projekt_VMD
 
-OPERATION_MODE_VMD=test
+#TEST auf Wert gleich Name: 
+#project.vmd.dirRepositoryPath=${project.vmd.dirRepositoryPath}
+
+#project.vmd.operation_mode=test
+#Merke: Einfacher Backslash wird von Ant so nicht erkannt. Darum hier Slash verwenden
+#project.vmd.dirRepositoryPath=C:/1fgl/repository/Projekt_VMD
+#project.vmd.dirPathClientFgl=c:/1fgl/client
