--- a/bat/FglALARICH_copy_local.properties
+++ b/bat/FglALARICH_copy_local.properties
@@ -8,6 +8,6 @@
 
 # TODO: Im ant Script diese Steuerungsdateien in der initialisierungsphase auf Validität prüfen.
 C:\VMWare\FGLXPHannibalVideoPlay3_768MB\FGLXPHannibalVideoPlay1VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
-c:\vmWare\FGLXPHannibalVideoPlay3_768MB\HannibalVideoPlayxVM.txt=
-c:\vmWare\FGLXPHannibalVideoPlay3_768MB\HannibalVideoPlayyVM.txt
+# TEST wird abgebrochen c:\vmWare\FGLXPHannibalVideoPlay3_768MB\HannibalVideoPlayxVM.txt=
+# TEST wird abgebrochen c:\vmWare\FGLXPHannibalVideoPlay3_768MB\HannibalVideoPlayyVM.txt
 C:\VMWare\FGLXPHannibalVideoPlay4_768MB\HannibalVideoPlay4VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
