--- a/bat/FglALARICH_copy_local.properties
+++ b/bat/FglALARICH_copy_local.properties
@@ -5,9 +5,19 @@
 # Achtung: Diese Datei muss ins ANSI Format kopiert werden (Notepad+++) #
 # Verschiedene Formate sind möglich                  					#
 #########################################################################
-
-# TODO: Im ant Script diese Steuerungsdateien in der initialisierungsphase auf Validität prüfen.
-C:\VMWare\FGLXPHannibalVideoPlay3_768MB\FGLXPHannibalVideoPlay1VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
 # TEST wird abgebrochen c:\vmWare\FGLXPHannibalVideoPlay3_768MB\HannibalVideoPlayxVM.txt=
 # TEST wird abgebrochen c:\vmWare\FGLXPHannibalVideoPlay3_768MB\HannibalVideoPlayyVM.txt
-C:\VMWare\FGLXPHannibalVideoPlay4_768MB\HannibalVideoPlay4VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
+
+# TODO: Im ant Script diese Steuerungsdateien in der initialisierungsphase auf Validität prüfen.
+C:\VMWare\FGLWin7Patton01_2048MB\FGLWin7Patton01VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLWin7PattonDEV02_2048MB\FGLWin7PattonDEV02VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPDominoR85_fgl02_768MB\FGLXPDominoR85Fgl02VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPDominoR853_fgl04_768MB\FGLXPDominoR853_fgl04VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalDEV04_768MB\FGLXPHannibalDEV04VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalDEV06_768MB\FGLXPHannibalDev06VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalDEV08_2048M\FGLXPHannibalDEV08VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalDEV14_2048M\FGLXPHannibalDEV14VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalVideoPlay1_768MB\FGLXPHannibalVideoPlay1VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalVideoPlay2_768MB\FGLXPHannibalVideoPlay2VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalVideoPlay3_768MB\FGLXPHannibalVideoPlay3VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalVideoPlay4_768MB\FGLXPHannibalVideoPlay4VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
