--- a/bat/FglALARICH_copy_local.properties
+++ b/bat/FglALARICH_copy_local.properties
@@ -9,15 +9,20 @@
 # TEST wird abgebrochen c:\vmWare\FGLXPHannibalVideoPlay3_768MB\HannibalVideoPlayyVM.txt
 
 # TODO: Im ant Script diese Steuerungsdateien in der initialisierungsphase auf Validität prüfen.
-C:\VMWare\FGLWin7Patton01_2048MB\FGLWin7Patton01VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLWin7PattonDEV02_2048MB\FGLWin7PattonDEV02VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPDominoR85_fgl02_768MB\FGLXPDominoR85Fgl02VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPDominoR853_fgl04_768MB\FGLXPDominoR853_fgl04VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPHannibalDEV04_768MB\FGLXPHannibalDEV04VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPHannibalDEV06_768MB\FGLXPHannibalDev06VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPHannibalDEV08_2048M\FGLXPHannibalDEV08VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPHannibalDEV14_2048M\FGLXPHannibalDEV14VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPHannibalVideoPlay1_768MB\FGLXPHannibalVideoPlay1VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPHannibalVideoPlay2_768MB\FGLXPHannibalVideoPlay2VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPHannibalVideoPlay3_768MB\FGLXPHannibalVideoPlay3VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPHannibalVideoPlay4_768MB\FGLXPHannibalVideoPlay4VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLWin7Patton01_2048MB\VM_FGLWin7Patton01.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLWin7PattonDEV02_2048MB\VM_FGLWin7PattonDEV02.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPDominoR85_fgl02_768MB\VM_FGLXPDominoR85Fgl02.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPDominoR853_fgl04_768MB\VM_FGLXPDominoR853_fgl04.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalDEV02_1024M\VM_FGLXPHannibalDEV02.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalDEV04_768MB\VM_FGLXPHannibalDEV04.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalDEV06_768MB\VM_FGLXPHannibalDev06.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalDEV08_2048M\VM_FGLXPHannibalDEV08.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalDEV14_2048M\VM_FGLXPHannibalDEV14.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalVideoPlay1_768MB\VM_FGLXPHannibalVideoPlay1.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalVideoPlay2_768MB\VM_FGLXPHannibalVideoPlay2.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalVideoPlay3_768MB\VM_FGLXPHannibalVideoPlay3.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalVideoPlay4_768MB\VM_FGLXPHannibalVideoPlay4.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPLastSrv02_768MB\VM_FGLXPLastSrv02.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPXMLBeans_1024M\VM_FGLXPXMLBeans.txt=C:\1fgl\repository\Projekt_VMD\vmd
+
+
