--- a/bat/project_ALARICH_vmd.properties
+++ b/bat/project_ALARICH_vmd.properties
@@ -6,5 +6,5 @@ test1=einTestWert
 
 #project.vmd.operation_mode=test
 #Merke: Einfacher Backslash wird von Ant so nicht erkannt. Darum hier Slash verwenden
-#project.vmd.dirRepositoryPath=C:/1fgl/repository/Projekt_VMD
-#project.vmd.dirPathClientFgl=c:/1fgl/client
+project.vmd.dirRepositoryPath=C:/1fgl/repository/Projekt_VMD
+project.vmd.dirPathClientFgl=C:/1fgl/client
