--- a/bat/FglPATTON-PRV_copy_local.properties
+++ b/bat/FglPATTON-PRV_copy_local.properties
@@ -1,27 +1,14 @@
 #########################################################################
-# VMD - Projekt:                                     					# 
-# Unterdatei des copy Task einer HOST Maschine 							#
+# VMD - Projekt:                                     			# 
+# Unterdatei des copy Task einer HOST Maschine 				#
 # Muss der Konvention entsprechen: FglRECHNERNAME_Installationen.txt    #
 # Achtung: Diese Datei muss ins ANSI Format kopiert werden (Notepad+++) #
-# Verschiedene Formate sind möglich                  					#
+# Verschiedene Formate sind möglich                  			#
 #########################################################################
-
-# 1. In Entwickung:
-# TODO: Die VMD Dateinamen müssen der Konvention entsprechen: FglRECHNERNAME_Installationen.txt
-# TODO: Im ant Script diese Steuerungsdateien in der initialisierungsphase auf Validität prüfen.
-
-
-# 2. Funktioniert:
-# Format: Ausgangsverzeichnis = Dateipfad
-# Kopiertest: Verzeichnis links - nimm den Dateinamen von rechts.
-#c:\vmWare\FGLXPHannibalVideoPlay3_768MB=C:\1fgl\repository\Projekt_VMD\vmd\FGLXPHannibalVideoPlay3VM.txt
 
 # Format: Dateipfad = Zielverzeichnis
 # Kopiertest: Datei mit gleichem Namen in Verzeichnis
-#C:\VMWare\FGLXPHannibalVideoPlay3_768MB\FGLXPHannibalVideoPlay1VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
-#C:\VMWare\FGLXPHannibalVideoPlay4_768MB\FGLXPHannibalVideoPlay4VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
-
-# Format: Dateipfad = Zieldateipfad
-# Kopiertest: Datei von A nach B kopieren
-#C:\VMWare\FGLXPHannibalVideoPlay3_768MB\FGLXPHannibalVideoPlay1VM.txt=C:\1fgl\repository\Projekt_VMD\vmd\FGLXPHannibalVideoPlay1VM.txt
-#C:\VMWare\FGLXPHannibalVideoPlay4_768MB\FGLXPHannibalVideoPlay4VM.txt=C:\1fgl\repository\Projekt_VMD\vmd\FGLXPHannibalVideoPlay4VM.txt
+C:\VMWare\FGLXPHannibalVideoPlay1_768MB\VM_FGLWinXP_HannibalVideoPlay1.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalVideoPlay2_768MB\VM_FGLWinXP_HannibalVideoPlay2.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalVideoPlay3_768MB\VM_FGLWinXP_HannibalVideoPlay3.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalVideoPlay4_768MB\VM_FGLWinXP_HannibalVideoPlay4.txt=C:\1fgl\repository\Projekt_VMD\vmd
