--- a/bat/FglALARICH_copy_local.properties
+++ b/bat/FglALARICH_copy_local.properties
@@ -1,28 +1,28 @@
 #########################################################################
-# VMD - Projekt:                                     					# 
-# Unterdatei des copy Task einer HOST Maschine 							#
+# VMD - Projekt:                                     			# 
+# Unterdatei des copy Task einer HOST Maschine 				#
 # Muss der Konvention entsprechen: FglRECHNERNAME_Installationen.txt    #
 # Achtung: Diese Datei muss ins ANSI Format kopiert werden (Notepad+++) #
-# Verschiedene Formate sind möglich                  					#
+# Verschiedene Formate sind möglich                  			#
 #########################################################################
 # TEST wird abgebrochen c:\vmWare\FGLXPHannibalVideoPlay3_768MB\HannibalVideoPlayxVM.txt=
 # TEST wird abgebrochen c:\vmWare\FGLXPHannibalVideoPlay3_768MB\HannibalVideoPlayyVM.txt
 
 # TODO: Im ant Script diese Steuerungsdateien in der initialisierungsphase auf Validität prüfen.
-C:\VMWare\FGLWin7Patton01_2048MB\VM_FGLWin7Patton01.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLWin7PattonDEV02_2048MB\VM_FGLWin7PattonDEV02.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPDominoR85_fgl02_768MB\VM_FGLXPDominoR85Fgl02.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPDominoR853_fgl04_768MB\VM_FGLXPDominoR853_fgl04.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPHannibalDEV02_1024M\VM_FGLXPHannibalDEV02.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPHannibalDEV04_768MB\VM_FGLXPHannibalDEV04.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPHannibalDEV06_768MB\VM_FGLXPHannibalDev06.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPHannibalDEV08_2048M\VM_FGLXPHannibalDEV08.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPHannibalDEV14_2048M\VM_FGLXPHannibalDEV14.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPHannibalVideoPlay1_768MB\VM_FGLXPHannibalVideoPlay1.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPHannibalVideoPlay2_768MB\VM_FGLXPHannibalVideoPlay2.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPHannibalVideoPlay3_768MB\VM_FGLXPHannibalVideoPlay3.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPHannibalVideoPlay4_768MB\VM_FGLXPHannibalVideoPlay4.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPLastSrv02_768MB\VM_FGLXPLastSrv02.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPXMLBeans_1024M\VM_FGLXPXMLBeans.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLWin7Patton01_2048MB\VM_FGLWin7_Patton01.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLWin7PattonDEV02_2048MB\VM_FGLWin7_PattonDEV02.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPDominoR85_fgl02_768MB\VM_FGLWinXP_DominoR85Fgl02.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPDominoR853_fgl04_768MB\VM_FGLWinXP_DominoR853_fgl04.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalDEV02_1024M\VM_FGLWinXP_HannibalDEV02.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalDEV04_768MB\VM_FGLWinXP_HannibalDEV04.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalDEV06_768MB\VM_FGLWinXP_HannibalDev06.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalDEV08_2048M\VM_FGLWinXP_HannibalDEV08.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalDEV14_2048M\VM_FGLWinXP_HannibalDEV14.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalVideoPlay1_768MB\VM_FGLWinXP_HannibalVideoPlay1.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalVideoPlay2_768MB\VM_FGLWinXP_HannibalVideoPlay2.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalVideoPlay3_768MB\VM_FGLWinXP_HannibalVideoPlay3.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalVideoPlay4_768MB\VM_FGLWinXP_HannibalVideoPlay4.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPLastSrv02_768MB\VM_FGLWinXP_LastSrv02.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPXMLBeans_1024M\VM_FGLWinXP_XMLBeans.txt=C:\1fgl\repository\Projekt_VMD\vmd
 
 
