--- a/bat/FglUGAKI-SRV_copy_local.properties
+++ b/bat/FglUGAKI-SRV_copy_local.properties
@@ -1,4 +1,4 @@
-#########################################################################
+﻿#########################################################################
 # VMD - Projekt:                                     					# 
 # Unterdatei des copy Task einer HOST Maschine 							#
 # Muss der Konvention entsprechen: FglRECHNERNAME_Installationen.txt    #
@@ -7,23 +7,23 @@
 #########################################################################
 
 # Format: Verzeichnis\Dateiname = Zielverzeichnis
-C:\VMWare\FGLW2KDominoR6_fgl01\VM_FGLW2KDominoR6Fgl01.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLW7UgakiSrv02VM\VM_FGLW7Ugaki02Srv_Installationen.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLW7UgakiSrvVM\VM_FGLWin7Ugaki_SRV_230GB.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPDominoR9Fgl07_768MB\VM_FGLXPDominoR9Fgl07.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPDominoR85_fgl03\VM_FGLXPDominoR85Fgl03.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPDominoR853Fgl05_768MB\VM_FGLXPDominoR853Fgl05.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPHannibalDEV03_2048M\VM_FGLXPHannibalDEV03.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPHannibalDEV05_768MB\VM_FGLXPHannibalDEV05.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPHannibalDEV07_768MB\VM_FGLXPHannibalDEV07.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPHannibalDEV09_2048M\VM_FGLXPHannibalDEV09.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPHannibalDEV11_2048M\VM_FGLXPHannibalDEV11.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPHannibalDEV13_2048M\VM_FGLXPHannibalDEV13.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPHannibalDEV15_2048M\VM_FGLXPHannibalDEV15.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPHannibalSRV_GIT\VM_FGLXPHannibalSRVGit.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPHannibalSRV_SVN\VM_FGLXPzKernelSrvSvnVM - als FGLXPHannibalSRVSvn.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPHannibalSRV_TOM\VM_FGLXPHannibalSRVTom.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPLastSrv01VM_768M\VM_FGLXPLastSrv01.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPNotesR8RCP_DEV\VM_FGLXPNotesR8RCP_DEV.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPVideoEdit\VM_FGLXPVideoEdit.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPXMLBeans\VM_FGLXPXMLBeans.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLW2KDominoR6_fgl01\VM_FGLWin2k_DominoR6Fgl01.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLW7UgakiSrv02VM\VM_FGLWin7_Ugaki02Srv_Installationen.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLW7UgakiSrvVM\VM_FGLWin7_Ugaki_SRV_230GB.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPDominoR9Fgl07_768MB\VM_FGLWinXP_DominoR9Fgl07.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPDominoR85_fgl03\VM_FGLWinXP_DominoR85Fgl03.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPDominoR853Fgl05_768MB\VM_FGLWinXP_DominoR853Fgl05.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalDEV03_2048M\VM_FGLWinXP_HannibalDEV03.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalDEV05_768MB\VM_FGLWinXP_HannibalDEV05.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalDEV07_768MB\VM_FGLWinXP_HannibalDEV07.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalDEV09_2048M\VM_FGLWinXP_HannibalDEV09.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalDEV11_2048M\VM_FGLWinXP_HannibalDEV11.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalDEV13_2048M\VM_FGLWinXP_HannibalDEV13.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalDEV15_2048M\VM_FGLWinXP_HannibalDEV15.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalSRV_GIT\VM_FGLWinXP_HannibalSRVGit.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalSRV_SVN\VM_FGLWinXP_zKernelSrvSvnVM - als FGLXPHannibalSRVSvn.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPHannibalSRV_TOM\VM_FGLWinXP_HannibalSRVTom.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPLastSrv01VM_768M\VM_FGLWinXP_LastSrv01.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPNotesR8RCP_DEV\VM_FGLWinXP_NotesR8RCP_DEV.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPVideoEdit\VM_FGLWinXP_VideoEdit.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLXPXMLBeans\VM_FGLWinXP_XMLBeans.txt=C:\1fgl\repository\Projekt_VMD\vmd
