--- a/bat/project_HIS4528_vmd.properties
+++ b/bat/project_HIS4528_vmd.properties
@@ -4,6 +4,9 @@ test1=einTestWert
 #TEST auf Wert gleich Name: 
 #project.vmd.dirRepositoryPath=${project.vmd.dirRepositoryPath}
 
+# Die vorgegebenen Verzeichnisstruktur 
+project.vmd.dirRepositoryBat=bat
+
 #Merke: Einfacher Backslash wird von Ant so nicht erkannt. Darum hier Slash verwenden
 project.vmd.dirRepositoryPath=C:/1fgl/repository/Projekt_VMD
 project.vmd.dirPathClientFgl=c:/1fgl/client
