--- a/bat/FglUGAKI-SRV_copy_local.properties
+++ b/bat/FglUGAKI-SRV_copy_local.properties
@@ -1,15 +1,15 @@
-﻿#########################################################################
+#########################################################################
 # VMD - Projekt:                                     					# 
 # Unterdatei des copy Task einer HOST Maschine 							#
 # Muss der Konvention entsprechen: FglRECHNERNAME_Installationen.txt    #
 # Achtung: Diese Datei muss ins ANSI Format kopiert werden (Notepad+++) #
-# Verschiedene Formate sind möglich                  					#
+# Verschiedene Formate sind moeglich                  					#
 #########################################################################
 
 # Format: Verzeichnis\Dateiname = Zielverzeichnis
 C:\VMWare\FGLW2KDominoR6_fgl01\VM_FGLWin2k_DominoR6Fgl01.txt=C:\1fgl\repository\Projekt_VMD\vmd
 C:\VMWare\FGLW7UgakiSrv02VM\VM_FGLWin7_Ugaki02Srv_Installationen.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLW7UgakiSrvVM\VM_FGLWin7_Ugaki_SRV_230GB.txt=C:\1fgl\repository\Projekt_VMD\vmd
+C:\VMWare\FGLW7UgakiSrvVM\VM_FGLWin7_Ugaki-SRV.txt=C:\1fgl\repository\Projekt_VMD\vmd
 C:\VMWare\FGLXPDominoR9Fgl07_768MB\VM_FGLWinXP_DominoR9Fgl07.txt=C:\1fgl\repository\Projekt_VMD\vmd
 C:\VMWare\FGLXPDominoR85_fgl03\VM_FGLWinXP_DominoR85Fgl03.txt=C:\1fgl\repository\Projekt_VMD\vmd
 C:\VMWare\FGLXPDominoR853Fgl05_768MB\VM_FGLWinXP_DominoR853Fgl05.txt=C:\1fgl\repository\Projekt_VMD\vmd
