--- a/bat/FglALARICH_copy_local.properties
+++ b/bat/FglALARICH_copy_local.properties
@@ -1,9 +1,9 @@
 #########################################################################
-# VMD - Projekt:                                     			# 
-# Unterdatei des copy Task einer HOST Maschine 				#
-# Muss der Konvention entsprechen: FglRECHNERNAME_Installationen.txt    #
-# Achtung: Diese Datei muss ins ANSI Format kopiert werden (Notepad+++) #
-# Verschiedene Formate sind möglich                  			#
+# VMD - Projekt:                                     																												# 
+# Unterdatei des copy Task einer HOST Maschine 																									#
+# Muss der Konvention entsprechen: FglRECHNERNAME_Installationen.txt    															#
+# Achtung: Diese Datei muss ins ANSI Format kopiert werden (Notepad+++) 														#
+# Verschiedene Formate (s.u.)sind möglich                  																							#
 #########################################################################
 # TEST wird abgebrochen c:\vmWare\FGLXPHannibalVideoPlay3_768MB\HannibalVideoPlayxVM.txt=
 # TEST wird abgebrochen c:\vmWare\FGLXPHannibalVideoPlay3_768MB\HannibalVideoPlayyVM.txt
