--- a/bat/FglUGAKI-SRV_copy_local.properties
+++ b/bat/FglUGAKI-SRV_copy_local.properties
@@ -1,9 +1,9 @@
 #########################################################################
-# VMD - Projekt:                                     					# 
-# Unterdatei des copy Task einer HOST Maschine 							#
-# Muss der Konvention entsprechen: FglRECHNERNAME_Installationen.txt    #
-# Achtung: Diese Datei muss ins ANSI Format kopiert werden (Notepad+++) #
-# Verschiedene Formate sind moeglich                  					#
+# VMD - Projekt:                                     																												# 
+# Unterdatei des copy Task einer HOST Maschine 																									#
+# Muss der Konvention entsprechen: FglRECHNERNAME_Installationen.txt    															#
+# Achtung: Diese Datei muss ins ANSI Format kopiert werden (Notepad+++) 														#
+# Verschiedene Formate (s.u.)sind möglich                  																							#
 #########################################################################
 
 # Format: Verzeichnis\Dateiname = Zielverzeichnis
