--- a/bat/test_vmd.properties
+++ b/bat/test_vmd.properties
@@ -21,11 +21,12 @@
 # Linker Teil existiert nicht und Rechter Teil existiert nicht (auch nicht als Verzeichnis). STEUERZEILE ÜBERSPRINGEN
 # TODO: das sind momentan Verzeichnipfade (Fall dd). Sollte ggfs. aber Fall xx sein.
 # Merke: Nicht existierende Verzeichnisse werden automatisch durch ant erstellt.
-#test1=eins
+# test1=eins
 
+# Rechter Teil existiert nicht, Datei aber an sich existiert 
+# C:\1fgl\repository\Projekt_VMD\testused\file_existBeispiel01.txt
+# C:\1fgl\repository\Projekt_VMD\testused\file_existBeispiel01.txt=
 
-# Rechter Teil existiert nicht c:\vmWare\FGLXPHannibalVideoPlay3_768MB\HannibalVideoPlayxVM.txt=
-#                              c:\vmWare\FGLXPHannibalVideoPlay3_768MB\HannibalVideoPlayyVM.txt
 
 ####################################################################
 # 2. Funktioniert:
@@ -34,16 +35,21 @@
 #Fall: links Verzeichnis, rechts NICHT EXISTIERENDE Datei
 # Kopiertest Df 1. Fall: Existierndes Verzeichnis links - nimm den Dateinamen von rechts. NICHT Existierende Datei rechts, die AUCH im linken Verzeichnis NICHT existiert!
 # Merke: Wenn die Datei nicht existiert, wird das nicht existierende Verzeichnis auch nicht erstellt.
-#C:\1fgl\repository\Projekt_VMD\testused=C:\temp\notexisting\notexistingEbene2\neverExistingFile.txt
+#C:\1fgl\repository\Projekt_VMD\testused=C:\temp\notexisting\notexistingEbene2\datei_die_nicht_existieren_soll.txt
 
+# Kopiertest: fd
+#C:\1fgl\repository\Projekt_VMD\testused\datei_die_nicht_existieren_soll.txt=C:\temp\notexisting\notexistingEbene2
 
-# Kopiertest Df 2. Fall: Existierndes Verzeichnis links - nimm den Dateinamen von rechts. NICHT Existierende Datei rechts, die aber im linken Verzeichnis existiert!
-#C:\1fgl\repository\Projekt_VMD\testused=C:\temp\notexisting\notexistingEbene2\file_copyBeispiel01.txt
+# Kopiertest: fD
+#C:\1fgl\repository\Projekt_VMD\testused\datei_die_nicht_existieren_soll.txt=C:\1fgl\repository\Projekt_VMD\testused02
+
 
 # Format: Ausgangsverzeichnis = Dateipfad
 # Kopiertest DF: Verzeichnis links - nimm den Dateinamen von rechts. Existierende Datei rechts!
 # TODO: Einen Löschtask entwickeln und diesen vorher einsetzen, damit die Datei auch wirklich rechts nicht existiert.
-#C:\1fgl\repository\Projekt_VMD\testused=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel02_01.txt
+#C:\1fgl\repository\Projekt_VMD\testused=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel00.txt
+#C:\1fgl\repository\Projekt_VMD\testused=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel01.txt
+#C:\1fgl\repository\Projekt_VMD\testused=C:\1fgl\repository\Projekt_VMD\testused02\file_copyBeispiel02.txt
 
 # Format: Dateipfad = nicht existierendes Zielverzeichnis # Merke: Nicht existierende Verzeichnisse werden automatisch durch ant erstellt.
 # TODO: Einen Löschtask entwickeln und diesen vorher einsetzen, damit das Verzeichnis rechts auch wirklich nicht existiert.
@@ -52,12 +58,12 @@
  
 # Format: Dateipfad = existierendes Zielverzeichnis
 # Kopiertest FD:
-C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp
+#C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp
 
-# Format: Dateipfad = Zieldateipfad
+# Format: Dateipfad = Zieldateipfad und die Datei umbenennen
 # Kopiertest FF:
-#C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel00.txt=C:\temp\file_copyBeispiel00.txt
-#C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp\file_copyBeispiel01.txt
-#C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp\file_copyBeispiel02.txt
+#C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel00.txt=C:\temp\file_copyBeispiel00renamed.txt
+#C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp\file_copyBeispiel01renamed.txt
+#C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp\file_copyBeispiel02renamed.txt
 
 
