--- a/bat/FglUGAKI-PRV_copy_local.properties
+++ b/bat/FglUGAKI-PRV_copy_local.properties
@@ -1,11 +1,11 @@
 #########################################################################
-# VMD - Projekt:                                     																												# 
-# Unterdatei des copy Task einer HOST Maschine 																									#
-# Muss der Konvention entsprechen: FglRECHNERNAME_Installationen.txt    															#
-# Achtung: Diese Datei muss ins ANSI Format kopiert werden (Notepad+++) 														#
-# Verschiedene Formate (s.u.)sind möglich                  																							#
+# VMD - Projekt:                                     		
+# Unterdatei des copy Task einer HOST Maschine 							
+# Muss der Konvention entsprechen: FglRECHNERNAME_Installationen.txt    
+# Achtung: Diese Datei muss ins ANSI Format kopiert werden (Notepad+++)
+# Verschiedene Formate (s.u.)sind möglich                  
 #########################################################################
 
 # Format: Verzeichnis\Dateiname = Zielverzeichnis
-c:\vmWare\FGLXPHannibalVideoPlay3_768MB\FGLWinXP_HannibalVideoPlay3VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
-c:\vmWare\FGLXPHannibalVideoPlay4_768MB\FGLWinXP_HannibalVideoPlay4VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
+c:\vmWare\FGLXPHannibalVideoPlay3_768MB\VM_FGLWinXP_HannibalVide3VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
+c:\vmWare\FGLXPHannibalVideoPlay4_768MB\VM_FGLWinXP_HannibalVide4VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
