VMD: Das Kopieren vom Controller getrennt
TODO Goon. Jetzt in den VMs testen.
Danach: Schema am Anfang testen.

--- a/bat/FglPATTON-PRV_copy_local.properties
+++ b/bat/FglPATTON-PRV_copy_local.properties
@@ -1,10 +1,10 @@
-#########################################################################
-# VMD - Projekt:                                     																												# 
-# Unterdatei des copy Task einer HOST Maschine 																									#
-# Muss der Konvention entsprechen: FglRECHNERNAME_Installationen.txt    															#
-# Achtung: Diese Datei muss ins ANSI Format kopiert werden (Notepad+++) 														#
-# Verschiedene Formate (s.u.)sind möglich                  																									#
-#########################################################################
+########################################################################
+# VMD - Projekt:                                     																												 
+# Unterdatei des copy Task einer HOST Maschine 																									
+# Muss der Konvention entsprechen: FglRECHNERNAME_Installationen.txt    															
+# Achtung: Diese Datei muss ins ANSI Format kopiert werden (Notepad+++) 														
+# Verschiedene Formate (s.u.)sind möglich                  																							
+########################################################################
 
 # Format: Dateipfad = Zielverzeichnis
 # Kopiertest: Datei mit gleichem Namen in Verzeichnis
