--- a/bat/FglPATTON-PRV_copy_local.properties
+++ b/bat/FglPATTON-PRV_copy_local.properties
@@ -8,7 +8,7 @@
 
 # Format: Dateipfad = Zielverzeichnis
 # Kopiertest: Datei mit gleichem Namen in Verzeichnis
-C:\VMWare\FGLXPHannibalVideoPlay1_768MB\VM_FGLWinXP_HannibalVide1VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPHannibalVideoPlay2_768MB\VM_FGLWinXP_HannibalVide2VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPHannibalVideoPlay3_768MB\VM_FGLWinXP_HannibalVide3VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
-C:\VMWare\FGLXPHannibalVideoPlay4_768MB\VM_FGLWinXP_HannibalVide4VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
+vmd://C:\VMWare\FGLXPHannibalVideoPlay1_768MB\VM_FGLWinXP_HannibalVide1VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
+vmd://C:\VMWare\FGLXPHannibalVideoPlay2_768MB\VM_FGLWinXP_HannibalVide2VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
+zip://C:\VMWare\FGLXPHannibalVideoPlay3_768MB\VM_FGLWinXP_HannibalVide3VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
+zip://C:\VMWare\FGLXPHannibalVideoPlay4_768MB\VM_FGLWinXP_HannibalVide4VM.txt=C:\1fgl\repository\Projekt_VMD\vmd
