3 - reagieren die ArrayFunktionen unter Java 8 anders als unter Java 7?

--- a/bat/test_vmd.properties
+++ b/bat/test_vmd.properties
@@ -66,4 +66,10 @@
 #C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel01.txt=C:\temp\file_copyBeispiel01renamed.txt
 #C:\1fgl\repository\Projekt_VMD\testused\file_copyBeispiel02.txt=C:\temp\file_copyBeispiel02renamed.txt
 
+# Teste den Schema-Controller, zunächst der Wechsel von einem Schema zu einem Anderen
+vmd://das ist ein Schemawechseltest
+vmd://test2
+copy://test4
+copy://teste5
+
 
